# banking-app

./: .coverage  .env.example  .gitignore  README.md  conftest.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: counters.py  decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  reader_utils.py  utils.py  widget.py
tests/: test_counters.py  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_module_widget.py  test_processing.py  test_reader_utils.py  test_utils.py
